--- a/content/publication/acopf-ml-admm/cite.bib
+++ b/content/publication/acopf-ml-admm/cite.bib
@@ -1,7 +1,10 @@
 @misc{Mak2022_MLADMM,
-  doi = {10.48550/ARXIV.2205.03787},
-  author = {Mak, Terrence W. K. and Chatzos, Minas and Tanneau, Mathieu and Van Hentenryck, Pascal},
-  title = {Learning Regionally Decentralized AC Optimal Power Flows with ADMM},
-  publisher = {arXiv},
-  year = {2022},
+  author  = {Mak, Terrence W.K. and Chatzos, Minas and Tanneau, Mathieu and Hentenryck, Pascal Van},
+  journal = {IEEE Transactions on Smart Grid},
+  title   = {Learning Regionally Decentralized AC Optimal Power Flows with ADMM},
+  year    = {2023},
+  volume  = {},
+  number  = {},
+  pages   = {1-1},
+  doi     = {10.1109/TSG.2023.3251292}
 }
