--- a/content/publication/2022_sced-proxies-jit-ctr/cite.bib
+++ b/content/publication/2022_sced-proxies-jit-ctr/cite.bib
@@ -5,6 +5,6 @@ volume = {213},
 pages = {108566},
 year = {2022},
 issn = {0378-7796},
-doi = {https://doi.org/10.1016/j.epsr.2022.108566},
+doi = {10.1016/j.epsr.2022.108566},
 author = {Wenbo Chen and Seonho Park and Mathieu Tanneau and Pascal {Van Hentenryck}},
 }
