--- a/publication/2022_lloa/cite.bib
+++ b/publication/2022_lloa/cite.bib
@@ -5,6 +5,6 @@ volume = {212},
 pages = {108272},
 year = {2022},
 issn = {0378-7796},
-doi = {https://doi.org/10.1016/j.epsr.2022.108272},
+doi = {10.1016/j.epsr.2022.108272},
 author = {Haoruo Zhao and Mathieu Tanneau and Pascal {Van Hentenryck}}
 }
