--- a/publication/2023_micp-disjunctive-cuts/cite.bib
+++ b/publication/2023_micp-disjunctive-cuts/cite.bib
@@ -7,5 +7,5 @@
   pages     = {671--719},
   year      = {2023},
   publisher = {Springer},
-  doi       = {https://doi.org/10.1007/s10107-022-01844-1}
+  doi       = {10.1007/s10107-022-01844-1}
 }
